Fixes to Overflow

--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,7 @@ html {
 }
 body {
   overflow-x: hidden;
+  word-wrap: break-word;
 }
 
 * {
@@ -146,4 +147,3 @@ body {
     }
   }
 }
-
